@@ -24,8 +24,6 @@
  *   51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA               *
  ***************************************************************************/
 
-
-
 #include "kbbgraphicsitemcursor.h"
 
 
